[package]
name = "Mita"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0.135"
tokio = { version="1.42.0", features = ["full"] }
anyhow = "1.0.95"
dotenv = "0.15.0"
vosk = "0.3.1"
cpal = "0.15.3"

[build-dependencies]
cc = "1.2.7"
